--- a/inception/package.json
+++ b/inception/package.json
@@ -7,5 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "dependencies": {
+    "eslint": "^8.42.0",
+    "next": "^13.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2"
   }
 }
