--- a/inception/package.json
+++ b/inception/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "eslint": "^8.42.0",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.0.18",
     "next": "^13.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
