--- a/inception/package.json
+++ b/inception/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "eslint": "^8.42.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.0.18",
