--- a/inception/package.json
+++ b/inception/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.0.18",
     "next": "^13.4.5",
+    "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
