--- a/inception/package.json
+++ b/inception/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
     "headlessui": "^0.0.0",
